// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxGroup /> snapshot should render the same 1`] = `
"Snapshot Diff:
 - Expected
+ Received

  <div
    className=\\"FieldGroup-sc-18uoi37-0 CheckboxGroup__Group-sc-1da60j6-0 eYHnCp\\"
  >
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0 hugfTy\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 efcaAt\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 UBdDk\\"
          disabled={false}
          id=\\"\\"
          name=\\"Foo\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <svg
          aria-hidden={true}
          className=\\"MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3 kecMHD\\"
          data-qtm-preloader=\\"icon\\"
          focusable=\\"false\\"
          style={
            Object {
              \\"color\\": \\"\\",
              \\"fontSize\\": 24,
              \\"maxWidth\\": 24,
            }
          }
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"
          />
        </svg>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 fJewoe\\"
          htmlFor=\\"\\"
        >
-         Foo label
+         Foo
        </label>
      </div>
    </div>
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0 hugfTy\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 efcaAt\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 UBdDk\\"
          disabled={false}
          id=\\"\\"
          name=\\"Bar\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <svg
          aria-hidden={true}
          className=\\"MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3 kecMHD\\"
          data-qtm-preloader=\\"icon\\"
          focusable=\\"false\\"
          style={
            Object {
              \\"color\\": \\"\\",
              \\"fontSize\\": 24,
              \\"maxWidth\\": 24,
            }
          }
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"
          />
        </svg>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 fJewoe\\"
          htmlFor=\\"\\"
        >
-         Bar label
+         Bar
        </label>
      </div>
    </div>
    <div
      className=\\"Checkbox__Wrapper-sc-1ca5whm-0 hugfTy\\"
    >
      <div
        className=\\"Checkbox__CheckboxWrapper-sc-1ca5whm-1 efcaAt\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 Checkbox__HiddenCheckbox-sc-1ca5whm-4 UBdDk\\"
          disabled={false}
          id=\\"\\"
          name=\\"Baz\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
        <svg
          aria-hidden={true}
          className=\\"MuiSvgIcon-root Checkbox__CheckIcon-sc-1ca5whm-3 kecMHD\\"
          data-qtm-preloader=\\"icon\\"
          focusable=\\"false\\"
          style={
            Object {
              \\"color\\": \\"\\",
              \\"fontSize\\": 24,
              \\"maxWidth\\": 24,
            }
          }
          viewBox=\\"0 0 24 24\\"
        >
          <path
            d=\\"M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z\\"
          />
        </svg>
        <label
          className=\\"Label-sc-1ny5bqy-0 Checkbox__CheckboxLabel-sc-1ca5whm-2 fJewoe\\"
          htmlFor=\\"\\"
        >
-         Baz label
+         Baz
        </label>
      </div>
    </div>
  </div>"
`;

exports[`<CheckboxGroup /> snapshot should render the same, when using buttons 1`] = `
"Snapshot Diff:
 - Expected
+ Received

  <div
    className=\\"FieldGroup-sc-18uoi37-0 CheckboxGroup__Group-sc-1da60j6-0 eYHnCp\\"
  >
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-2 fvryxK\\"
    >
      <label
        checked={false}
        className=\\"CheckboxButton__CheckButton-sc-1rvg70v-3 kHCjUp\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-12\\"
+       htmlFor=\\"checkbox-button-15\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 gWGOtr\\"
          disabled={false}
-         id=\\"checkbox-button-12\\"
+         id=\\"checkbox-button-15\\"
          name=\\"Foo\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
-       Foo label
+       Foo
      </label>
    </div>
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-2 fvryxK\\"
    >
      <label
        checked={false}
        className=\\"CheckboxButton__CheckButton-sc-1rvg70v-3 kHCjUp\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-13\\"
+       htmlFor=\\"checkbox-button-16\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 gWGOtr\\"
          disabled={false}
-         id=\\"checkbox-button-13\\"
+         id=\\"checkbox-button-16\\"
          name=\\"Bar\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
-       Bar label
+       Bar
      </label>
    </div>
    <div
      className=\\"CheckboxButton__Wrapper-sc-1rvg70v-2 fvryxK\\"
    >
      <label
        checked={false}
        className=\\"CheckboxButton__CheckButton-sc-1rvg70v-3 kHCjUp\\"
        disabled={false}
-       htmlFor=\\"checkbox-button-14\\"
+       htmlFor=\\"checkbox-button-17\\"
        size=\\"medium\\"
      >
        <input
          checked={false}
          className=\\"HiddenInput-sc-14w753s-0 CheckboxButton__HiddenCheckbox-sc-1rvg70v-0 gWGOtr\\"
          disabled={false}
-         id=\\"checkbox-button-14\\"
+         id=\\"checkbox-button-17\\"
          name=\\"Baz\\"
          onChange={[Function anonymous]}
          type=\\"checkbox\\"
          value=\\"\\"
        />
-       Baz label
+       Baz
      </label>
    </div>
  </div>"
`;

exports[`<CheckboxGroup /> snapshot simple with <CheckboxGroup.Button /> 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 .CheckboxButton__LockIcon-sc-1rvg70v-1 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-3"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-3"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-4"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-4"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-5"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-5"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with <CheckboxGroup.Checkbox /> 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c2:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with options 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c2:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot simple with options and type prop as "button" 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 .CheckboxButton__LockIcon-sc-1rvg70v-1 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-0"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-0"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-1"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-1"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-2"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-2"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> and icons 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 .CheckboxButton__LockIcon-sc-1rvg70v-1 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-18"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-18"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-19"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-19"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-20"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-20"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> with an error 1`] = `
.c4 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 .CheckboxButton__LockIcon-sc-1rvg70v-1 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-6"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-6"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-7"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-7"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-8"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-8"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
  <span
    className="c4"
  >
    Error Message
  </span>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Button /> with disabled options 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 .c4 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={true}
      htmlFor="checkbox-button-9"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={true}
        id="checkbox-button-9"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c4 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
        />
      </svg>
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-10"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-10"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={true}
      className="c2"
      disabled={true}
      htmlFor="checkbox-button-11"
      size="medium"
    >
      <input
        checked={true}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={true}
        id="checkbox-button-11"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c4 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1 1.71 0 3.1 1.39 3.1 3.1v2z"
        />
      </svg>
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Checkbox /> with an error 1`] = `
.c6 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c2:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c2 + .c3 {
  border-color: #e91b0c;
}

.c2:checked + .c3 {
  background-color: #e91b0c;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #e91b0c;
  box-shadow: 0px 3px 5px -1px rgba(233,27,12,0.2),0px 5px 8px 0px rgba(233,27,12,0.14),0px 1px 14px 0px rgba(233,27,12,0.12);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={false}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={false}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
  <span
    className="c6"
  >
    Error Message
  </span>
</div>
`;

exports[`<CheckboxGroup /> snapshot with <CheckboxGroup.Checkbox /> with disabled options 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-top: 4px;
}

.c5 {
  display: block;
  margin-bottom: 5px;
  color: #424242;
  margin: 0 0 0 12px;
}

.c2 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
  cursor: pointer;
  height: 100%;
  width: 100%;
}

.c2 + .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 2px;
  box-sizing: border-box;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 24px;
  background-color: #ffffff;
  border: 2px solid #999999;
  font-size: 20px;
}

.c2:checked + .c3 {
  border-width: 0;
  background-color: #1250C4;
  color: #f2f2f2;
}

.c2:hover + .c3,
.c2:focus + .c3 {
  border-color: #1250C4;
  box-shadow: 0px 3px 5px -1px rgba(18,80,196,0.2),0px 5px 8px 0px rgba(18,80,196,0.14),0px 1px 14px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  cursor: not-allowed;
}

.c2[disabled] ~ .c4 {
  color: #999999;
}

.c2[disabled] + .c3 {
  border-color: #999999;
  background-color: #e0e0e0;
}

.c2[disabled]:checked + .c3 {
  background-color: #999999;
}

.c2[disabled]:hover + .c3 {
  box-shadow: 0px 0px 0px 0px rgba(66,66,66,0.2),0px 0px 0px 0px rgba(66,66,66,0.14),0px 0px 0px 0px rgba(66,66,66,0.12);
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={true}
        id=""
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Foo
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={false}
        id=""
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Bar
      </label>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className="c1"
    >
      <input
        checked={true}
        className="HiddenInput-sc-14w753s-0 c2"
        disabled={true}
        id=""
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden={true}
        className="MuiSvgIcon-root c3 "
        data-qtm-preloader="icon"
        focusable="false"
        style={
          Object {
            "color": "",
            "fontSize": 24,
            "maxWidth": 24,
          }
        }
        viewBox="0 0 24 24"
      >
        <path
          d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
        />
      </svg>
      <label
        className="Label-sc-1ny5bqy-0 c4 c5"
        htmlFor=""
      >
        Baz
      </label>
    </div>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with inline <CheckboxGroup.Button /> 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 {
  display: inline-block;
  margin-right: 16px;
  vertical-align: top;
}

.c1:last-child {
  margin-right: 0;
}

.c1 .CheckboxButton__LockIcon-sc-1rvg70v-1 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-21"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-21"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-22"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-22"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-23"
      size="medium"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-23"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;

exports[`<CheckboxGroup /> snapshot with size <CheckboxGroup.Button /> 1`] = `
.c3 {
  border: 0;
  height: 0;
  margin: 0;
  opacity: 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 0;
}

.c1 .CheckboxButton__LockIcon-sc-1rvg70v-1 {
  font-size: 17px;
  margin-left: 8px;
}

.c2 {
  margin-bottom: 16px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  position: relative;
}

<div
  className="FieldGroup-sc-18uoi37-0 c0"
>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-24"
      size="large"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-24"
        name="Foo"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Foo
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-25"
      size="large"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-25"
        name="Bar"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Bar
    </label>
  </div>
  <div
    className="c1"
  >
    <label
      checked={false}
      className="c2"
      disabled={false}
      htmlFor="checkbox-button-26"
      size="large"
    >
      <input
        checked={false}
        className="HiddenInput-sc-14w753s-0 c3"
        disabled={false}
        id="checkbox-button-26"
        name="Baz"
        onChange={[Function]}
        type="checkbox"
        value=""
      />
      Baz
    </label>
  </div>
</div>
`;
